# drunkgpt

./: .gitignore  EXAMPLE_ERROR.py  chat.clj  handletest.py  log.txt  main.py  makefile  mild.py  nosey.py  personas.json  pyproject.toml  pytts_sandbox.py  queue_trial.py  readme.md  reference.py  requirements.txt  setup.sh  speechtest.py  stream.py  test.py  thread_test.py  thread_trial.py  thread_trial_2.py  trial3.py
.clj-kondo/.cache/v1/clj/: c.core.transit.json  ca.core.transit.json  ch.core.transit.json  ch.transit.json  cha.transit.json  chat..transit.json  chat.c.transit.json  chat.co.transit.json  chat.cor.transit.json  chat.core.transit.json  chat.transit.json  drun.core.transit.json  drunk.core.transit.json  drunkg.core.transit.json  drunkgp.core.transit.json  drunkgpt.core.transit.json  ftalk.core.transit.json  openai-chat-app.core.transit.json
.lsp/.cache/: db.transit.json
experiments/: main.py
pocs/: example.json  models.json  reference.py  speechtest.py
