[tool.poetry]
name = "drunkgpt"
version = "0.1.0"
description = ""
authors = ["Jim Sebastian Lam <jim.sebastian.lam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.8.4"
aiosignal = ">=1.3.1"
async-timeout = ">=4.0.2"
attrs = ">=22.2.0"
certifi = ">=2022.12.7"
charset-normalizer = ">=3.1.0"
frozenlist = ">=1.3.3"
idna = ">=3.4"
multidict = ">=6.0.4"
openai = ">=0.27.2"
playsound = ">=1.3.0"
py3-tts = ">=3.0"
pyaudio = ">=0.2.13"
pyobjc = ">=9.0.1"
pyobjc-core = ">=9.0.1"
pyobjc-framework-accessibility = ">=9.0.1"
pyobjc-framework-accounts = ">=9.0.1"
pyobjc-framework-addressbook = ">=9.0.1"
pyobjc-framework-adservices = ">=9.0.1"
pyobjc-framework-adsupport = ">=9.0.1"
pyobjc-framework-applescriptkit = ">=9.0.1"
pyobjc-framework-applescriptobjc = ">=9.0.1"
pyobjc-framework-applicationservices = ">=9.0.1"
pyobjc-framework-apptrackingtransparency = ">=9.0.1"
pyobjc-framework-audiovideobridging = ">=9.0.1"
pyobjc-framework-authenticationservices = ">=9.0.1"
pyobjc-framework-automaticassessmentconfiguration = ">=9.0.1"
pyobjc-framework-automator = ">=9.0.1"
pyobjc-framework-avfoundation = ">=9.0.1"
pyobjc-framework-avkit = ">=9.0.1"
pyobjc-framework-avrouting = ">=9.0.1"
pyobjc-framework-backgroundassets = ">=9.0.1"
pyobjc-framework-businesschat = ">=9.0.1"
pyobjc-framework-calendarstore = ">=9.0.1"
pyobjc-framework-callkit = ">=9.0.1"
pyobjc-framework-cfnetwork = ">=9.0.1"
pyobjc-framework-classkit = ">=9.0.1"
pyobjc-framework-cloudkit = ">=9.0.1"
pyobjc-framework-cocoa = ">=9.0.1"
pyobjc-framework-collaboration = ">=9.0.1"
pyobjc-framework-colorsync = ">=9.0.1"
pyobjc-framework-contacts = ">=9.0.1"
pyobjc-framework-contactsui = ">=9.0.1"
pyobjc-framework-coreaudio = ">=9.0.1"
pyobjc-framework-coreaudiokit = ">=9.0.1"
pyobjc-framework-corebluetooth = ">=9.0.1"
pyobjc-framework-coredata = ">=9.0.1"
pyobjc-framework-corehaptics = ">=9.0.1"
pyobjc-framework-corelocation = ">=9.0.1"
pyobjc-framework-coremedia = ">=9.0.1"
pyobjc-framework-coremediaio = ">=9.0.1"
pyobjc-framework-coremidi = ">=9.0.1"
pyobjc-framework-coreml = ">=9.0.1"
pyobjc-framework-coremotion = ">=9.0.1"
pyobjc-framework-coreservices = ">=9.0.1"
pyobjc-framework-corespotlight = ">=9.0.1"
pyobjc-framework-coretext = ">=9.0.1"
pyobjc-framework-corewlan = ">=9.0.1"
pyobjc-framework-cryptotokenkit = ">=9.0.1"
pyobjc-framework-datadetection = ">=9.0.1"
pyobjc-framework-devicecheck = ">=9.0.1"
pyobjc-framework-dictionaryservices = ">=9.0.1"
pyobjc-framework-discrecording = ">=9.0.1"
pyobjc-framework-discrecordingui = ">=9.0.1"
pyobjc-framework-diskarbitration = ">=9.0.1"
pyobjc-framework-dvdplayback = ">=9.0.1"
pyobjc-framework-eventkit = ">=9.0.1"
pyobjc-framework-exceptionhandling = ">=9.0.1"
pyobjc-framework-executionpolicy = ">=9.0.1"
pyobjc-framework-extensionkit = ">=9.0.1"
pyobjc-framework-externalaccessory = ">=9.0.1"
pyobjc-framework-fileprovider = ">=9.0.1"
pyobjc-framework-fileproviderui = ">=9.0.1"
pyobjc-framework-findersync = ">=9.0.1"
pyobjc-framework-fsevents = ">=9.0.1"
pyobjc-framework-gamecenter = ">=9.0.1"
pyobjc-framework-gamecontroller = ">=9.0.1"
pyobjc-framework-gamekit = ">=9.0.1"
pyobjc-framework-gameplaykit = ">=9.0.1"
pyobjc-framework-healthkit = ">=9.0.1"
pyobjc-framework-imagecapturecore = ">=9.0.1"
pyobjc-framework-imserviceplugin = ">=9.0.1"
pyobjc-framework-inputmethodkit = ">=9.0.1"
pyobjc-framework-installerplugins = ">=9.0.1"
pyobjc-framework-instantmessage = ">=9.0.1"
pyobjc-framework-intents = ">=9.0.1"
pyobjc-framework-intentsui = ">=9.0.1"
pyobjc-framework-iosurface = ">=9.0.1"
pyobjc-framework-ituneslibrary = ">=9.0.1"
pyobjc-framework-kernelmanagement = ">=9.0.1"
pyobjc-framework-latentsemanticmapping = ">=9.0.1"
pyobjc-framework-launchservices = ">=9.0.1"
pyobjc-framework-libdispatch = ">=9.0.1"
pyobjc-framework-linkpresentation = ">=9.0.1"
pyobjc-framework-localauthentication = ">=9.0.1"
pyobjc-framework-localauthenticationembeddedui = ">=9.0.1"
pyobjc-framework-mailkit = ">=9.0.1"
pyobjc-framework-mapkit = ">=9.0.1"
pyobjc-framework-mediaaccessibility = ">=9.0.1"
pyobjc-framework-medialibrary = ">=9.0.1"
pyobjc-framework-mediaplayer = ">=9.0.1"
pyobjc-framework-mediatoolbox = ">=9.0.1"
pyobjc-framework-metal = ">=9.0.1"
pyobjc-framework-metalfx = ">=9.0.1"
pyobjc-framework-metalkit = ">=9.0.1"
pyobjc-framework-metalperformanceshaders = ">=9.0.1"
pyobjc-framework-metalperformanceshadersgraph = ">=9.0.1"
pyobjc-framework-metrickit = ">=9.0.1"
pyobjc-framework-mlcompute = ">=9.0.1"
pyobjc-framework-modelio = ">=9.0.1"
pyobjc-framework-multipeerconnectivity = ">=9.0.1"
pyobjc-framework-naturallanguage = ">=9.0.1"
pyobjc-framework-netfs = ">=9.0.1"
pyobjc-framework-network = ">=9.0.1"
pyobjc-framework-networkextension = ">=9.0.1"
pyobjc-framework-notificationcenter = ">=9.0.1"
pyobjc-framework-opendirectory = ">=9.0.1"
pyobjc-framework-osakit = ">=9.0.1"
pyobjc-framework-oslog = ">=9.0.1"
pyobjc-framework-passkit = ">=9.0.1"
pyobjc-framework-pencilkit = ">=9.0.1"
pyobjc-framework-photos = ">=9.0.1"
pyobjc-framework-photosui = ">=9.0.1"
pyobjc-framework-preferencepanes = ">=9.0.1"
pyobjc-framework-pushkit = ">=9.0.1"
pyobjc-framework-quartz = ">=9.0.1"
pyobjc-framework-quicklookthumbnailing = ">=9.0.1"
pyobjc-framework-replaykit = ">=9.0.1"
pyobjc-framework-safariservices = ">=9.0.1"
pyobjc-framework-safetykit = ">=9.0.1"
pyobjc-framework-scenekit = ">=9.0.1"
pyobjc-framework-screencapturekit = ">=9.0.1"
pyobjc-framework-screensaver = ">=9.0.1"
pyobjc-framework-screentime = ">=9.0.1"
pyobjc-framework-scriptingbridge = ">=9.0.1"
pyobjc-framework-searchkit = ">=9.0.1"
pyobjc-framework-security = ">=9.0.1"
pyobjc-framework-securityfoundation = ">=9.0.1"
pyobjc-framework-securityinterface = ">=9.0.1"
pyobjc-framework-servicemanagement = ">=9.0.1"
pyobjc-framework-sharedwithyou = ">=9.0.1"
pyobjc-framework-sharedwithyoucore = ">=9.0.1"
pyobjc-framework-shazamkit = ">=9.0.1"
pyobjc-framework-social = ">=9.0.1"
pyobjc-framework-soundanalysis = ">=9.0.1"
pyobjc-framework-speech = ">=9.0.1"
pyobjc-framework-spritekit = ">=9.0.1"
pyobjc-framework-storekit = ">=9.0.1"
pyobjc-framework-syncservices = ">=9.0.1"
pyobjc-framework-systemconfiguration = ">=9.0.1"
pyobjc-framework-systemextensions = ">=9.0.1"
pyobjc-framework-threadnetwork = ">=9.0.1"
pyobjc-framework-uniformtypeidentifiers = ">=9.0.1"
pyobjc-framework-usernotifications = ">=9.0.1"
pyobjc-framework-usernotificationsui = ">=9.0.1"
pyobjc-framework-videosubscriberaccount = ">=9.0.1"
pyobjc-framework-videotoolbox = ">=9.0.1"
pyobjc-framework-virtualization = ">=9.0.1"
pyobjc-framework-vision = ">=9.0.1"
pyobjc-framework-webkit = ">=9.0.1"
requests = ">=2.28.2"
speechrecognition = ">=3.10.0"
tqdm = ">=4.65.0"
urllib3 = ">=1.26.15"
yarl = ">=1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
